--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <h2>Privacy Policy</h2> <p> Johny Shah built the Video Downloader app as a Free app. This SERVICE is provided by
-                    Rangrej_apps at no cost and is intended for use as is.
+                    Johnyteam_apps at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
                   </p> <p>If you choose to use my Service, then you agree to the collection and use of information in
